tests/snapshots/test__from_fixtures@any_of__any_of_with_constraint_to_type_1.json.snap
---
source: tests/test.rs
expression: diff
input_file: tests/fixtures/any_of/any_of_with_constraint_to_type_1.json
---
[
    Change {
        path: "",
        change: RangeRemove {
            removed: Minimum,
            value: 1.0,
        },
    },
    Change {
        path: "",
        change: TypeAdd {
            added: String,
        },
    },
]
