tests/snapshots/test__from_fixtures@any_of__number_1.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    anyOf:
      - maximum: 10
        type: number
      - minimum: 1
        type: number
      - maximum: 200
        minimum: 100
        type: number
  rhs:
    anyOf:
      - maximum: 14
        minimum: 7
        type: number
      - maximum: 3
        type: number
      - minimum: 2
        type: number
input_file: tests/fixtures/any_of/number_1.json
---
[
    Change {
        path: ".<anyOf:1>",
        change: RangeChange {
            changed: Maximum,
            old_value: 10.0,
            new_value: 3.0,
        },
    },
    Change {
        path: ".<anyOf:2>",
        change: RangeChange {
            changed: Minimum,
            old_value: 1.0,
            new_value: 2.0,
        },
    },
    Change {
        path: ".<anyOf:0>",
        change: RangeChange {
            changed: Minimum,
            old_value: 100.0,
            new_value: 7.0,
        },
    },
    Change {
        path: ".<anyOf:0>",
        change: RangeChange {
            changed: Maximum,
            old_value: 200.0,
            new_value: 14.0,
        },
    },
]
