tests/snapshots/test__from_fixtures@any_of__objects_3.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    anyOf:
      - type: boolean
      - properties:
          foo: {}
      - properties:
          type:
            const: bar
  rhs:
    anyOf:
      - properties:
          foo: {}
        title: replay_recording
        type: object
      - properties:
          type:
            const: bar
input_file: tests/fixtures/any_of/objects_3.json
---
[
    Change {
        path: "",
        change: TypeRemove {
            removed: Boolean,
        },
    },
]
